@@ -1,5 +1,14 @@
 2001-09-29  Kevin Vandersloot <kfv101@psu.edu>
 
+	* proctable.c: add back icon support
+
+	* procman.c: for now only load the default icons
+
+	* util.c (get_size_string): return floats to one decimal
+	place
+
+2001-09-29  Kevin Vandersloot <kfv101@psu.edu>
+
 	* util.c (get_size_string): put this function here since I 
 	have it in about three different places already
 
